--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ crash.log
 # version control.
 #
 # example.tfvars
+secrets.auto.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -204,10 +205,6 @@ dmypy.json
 
 ### vscode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 *.code-workspace
 
 ### Windows ###
